samples/_failures_safe/1761364488_fdf61f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9973f6e9.c: In function ‘main’:
./samples/SAFE/__tmp_9973f6e9.c:157:5: error: expected declaration or statement at end of input
  157 |     if (product.data != NULL) {
      |     ^~
./samples/SAFE/__tmp_9973f6e9.c:157:5: error: expected declaration or statement at end of input
